# resume

./: README.md  pyproject.toml  tasks.py
data/: details.json
myresume/: builder.py  generate_resume.py  generate_resume_copy.py  schema.py
