[tool.poetry]
name = "myresume"
version = "0.1.0"
description = ""
authors = ["Sundara Nataraja <sundaranatarajaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
pydantic = "^1.10.2"
invoke = "^1.7.3"
typer = "^0.7.0"
svglib = "^1.4.1"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_resume='myresume.generate_resume:main'